# JumpstartedSkeleton

./: CMakeLists.txt  JumpstartedSkeletonCPack.cmake  JumpstartedSkeletonCPackOptions.cmake  README.md  conanfile.py  sonar-project.properties.in
include/Zemon/: JumpstartedSkeleton.h
scripts/: JumpstartedSkeleton.init
src/: CMakeLists.txt  JumpstartedSkeleton-cli.cpp  JumpstartedSkeleton-cli.h  JumpstartedSkeleton.cpp  main.cpp
test_package/: CMakeLists.txt  JumpstartedSkeletonTestConan.cpp  conanfile.py
tests/: CMakeLists.txt  JumpstartedSkeleton-cliTest.cpp  JumpstartedSkeletonTest.cpp
